# irrigation-pi

./: config.toml  pyproject.toml  update.sh
backend/app/: config.py
frontend/www/browser/assets/config/: appConfig.prod.json
irrigation_pi/: constants.py
