[project]
name = "irrigation-pi"
version = "1.3.0"
description = ""
authors = [{ name = "Max Pfeiffer", email = "max@maxpfeiffer.ch" }]
requires-python = "<4.0,>=3.11"
readme = "README.md"
license = "MIT"
dependencies = [
    "APScheduler==3.10.4",
    "asyncer==0.0.8",
    "semver==3.0.4",
    "toml==0.10.2",
    "gpiozero==2.0.1",
    "pigpio==1.78",
    "rpi-lgpio>=0.6",
    "alembic==1.16.1",
    "click==8.2.1",
    "fastapi-slim==0.115.12",
    "furl==2.1.4",
    "psutil==7.0.0",
    "pydantic-settings==2.9.1",
    "sqlalchemy==2.0.41",
    "sqlmodel==0.0.24",
    "uvicorn[standard]==0.34.3",
]


[project.scripts]
irrigation-pi = "irrigation_pi:cli"

[dependency-groups]
dev = [
    "pre-commit==4.2.0",
    "httpx==0.28.1",
    "coverage==7.8.2",
    "pytest==8.4.0",
    "pytest-asyncio==1.0.0",
    "pytest-cov==6.1.1",
    "ruff==0.11.13",
]

[tool.ruff]
exclude = [".venv", "backend/migrations", "frontend"]

[tool.ruff.lint]
select = [
    "F", # Pyflakes
    "E", # pycodestyle
    "W", # pycodestyle
    "I", # isort
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "ASYNC", # flake8-async
    "RUF",  # Ruff-specific rules
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "irrigation_pi/tests",
    "backend/tests"
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
